--- a/style.css
+++ b/style.css
@@ -9,14 +9,27 @@ body {
 }
 
 h1 {
-    color: #333;
-    margin-bottom: 20px;
+    margin: 10px;
+}
+
+p {
+    margin: 10px;
+}
+
+hr {
+    border: 0;
+    clear: both;
+    display: block;
+    margin: 10px;
+    width: 65vw;
+    background-color: #191919;
+    height: 1px;
 }
 
 .options {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: start;
     margin: 10px;
 }
 
@@ -35,6 +48,12 @@ input {
 
 input[type="number"], input[type="color"] {
     width: 100px;
+}
+
+input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+    accent-color: #F15025;
 }
 
 button {
@@ -58,13 +77,13 @@ button:hover {
 
 .circle-image {
     position: relative;
-    min-width: 50vh;
-    min-height: 50vh;
+    width: 50vh;
+    height: 50vh;
     margin: 10px;
 }
 
 .circle-image canvas {
-    border: 1px solid #000;
+    border: 5px solid #191919;
     width: 100%;
     height: 100%;
     position: absolute;
