--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ input[type="checkbox"] {
 button {
     padding: 10px 20px;
     background-color: #F15025;
-    color: white;
+    color: #E6E8E6;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -76,14 +76,15 @@ button:hover {
 }
 
 .circle-image {
+    border: 5px solid #191919;
+    background-color: #E6E8E6;
     position: relative;
-    width: 50vh;
-    height: 50vh;
+    width: 40vh;
+    height: 40vh;
     margin: 10px;
 }
 
 .circle-image canvas {
-    border: 5px solid #191919;
     width: 100%;
     height: 100%;
     position: absolute;
