--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
     background-color: #CED0CE;
 }
 
+.container {
+    display: grid;
+    grid-template-columns: 400px min-content;
+}
+
 h1 {
     margin: 10px;
 }
@@ -76,11 +81,10 @@ button:hover {
 }
 
 .circle-image {
-    border: 5px solid #191919;
     background-color: #E6E8E6;
     position: relative;
-    width: 40vh;
-    height: 40vh;
+    width: 60vh;
+    height: 60vh;
     margin: 10px;
 }
 
@@ -90,4 +94,11 @@ button:hover {
     position: absolute;
     top: 0;
     left: 0;
+}
+
+@media only screen and (max-width: 700px) {
+    .container {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 }
